--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 certifi==2019.11.28
 chardet==3.0.4
+code128==0.3
 idna==2.8
 keyboard==0.13.4
+pdfkit==0.6.1
+Pillow==6.2.1
 pycairo==1.18.2
 PyGObject==3.34.0
 PyGObject-stubs==0.0.2
