--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+altgraph==0.16.1
 certifi==2019.11.28
 chardet==3.0.4
 code128==0.3
@@ -8,6 +9,7 @@ Pillow==6.2.1
 pycairo==1.18.2
 PyGObject==3.34.0
 PyGObject-stubs==0.0.2
+PyInstaller==4.0.dev0+9dd34bdfba
 pynput==1.5.0
 python-dotenv==0.10.3
 python-xlib==0.25
